# genshin-helper

./: .gitignore  GenshinToolkit Python.bat  LICENSE  README.md  benchmark.py  pyproject.toml  requirements.txt  run.bat
dotnet/: AutoSkipper.csproj  AutoSkipper.slnx  Logger.cs  Program.cs  README.md  app.manifest  config.json
dotnet/BenchmarkDotNet.Artifacts/results/: AutoSkipper.Benchmarks.CoreBenchmarks-report-github.md  AutoSkipper.Benchmarks.CoreBenchmarks-report.csv  AutoSkipper.Benchmarks.CoreBenchmarks-report.html
dotnet/Benchmarks/: AutoSkipper.Benchmarks.csproj  CoreBenchmarks.cs  Program.cs
dotnet/Properties/PublishProfiles/: FolderProfile.pubxml
dotnet/src/: AutoSkipper.cs  ConfigData.cs  GlobalHooks.cs  InputSender.cs  JsonContext.cs  LogForm.cs  Logger.cs  Native.cs  ScreenConfig.cs
python/: GenshinToolkit Python.bat  pyproject.toml
python/src/: autoskip_dialogue.py
python/tests/: test_autoskip.py  test_pixel_perf.py  test_spam_integration.py
src/: autoskip_dialogue.py
tests/: test_autoskip.py
