[tool.poetry]
name = "genshin-dialogue-autoskip"
version = "1.0.0"
description = "A Genshin Impact dialogue auto-skipper."
authors = ["Ujjawal Kumar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^300"
pyautogui = "^0.9.53"
pynput = "^1.7.6"
python-dotenv = "^0.19.2"
pygetwindow = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"