[project]
name = "genshin-dialogue-autoskip"
version = "1.0.0"
description = "Automated dialogue skipper for Genshin Impact"
authors = [
    {name = "Ujjawal Kumar",email = "ujjawalkumar1810@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=306",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]
